# nyx

./: .env.example  .gitignore  README.md  electron-builder.json5  index.html  package-lock.json  package.json  telemetry-id  tsconfig.json  vite.config.mts
.github/workflows/: build.yml
backend/: .gitignore  package-lock.json  package.json  server.js
electron/: IntelligenceManager.ts  LLMHelper.ts  ScreenshotHelper.ts  ThemeManager.ts  UpdateManager.ts  WindowHelper.ts  ipcHandlers.ts  main.ts  preload.ts  prompts.ts  tsconfig.json
electron/audio/: GoogleSTT.ts  SystemAudioCapture.ts  WebSpeechSTT.ts
electron/db/: ChatFileManager.ts  DatabaseManager.ts
electron/rag/: RAGManager.ts
native-module/: Cargo.toml  index.js  nyx-audio.win32-x64-msvc.node  package-lock.json  package.json
native-module/src/: audio_config.rs  lib.rs  microphone.rs  resampler.rs  silence_suppression.rs  streaming_resampler.rs  system_audio.rs  vad.rs
native-module/src/speaker/: mod.rs  sck.rs  windows.rs
public/: mic-capture.html  web-speech.html
src/: App.tsx  global.d.ts  index.css
src/components/: AboutSection.tsx  ChatOverlay.tsx  EditableTextBlock.tsx  StartupSequence.tsx  ToastContainer.tsx  banner.tsx  chats.tsx  header.tsx  settingsPopup.tsx
src/components/ChatDetails/: ChatDetails.tsx  MessageRenderer.tsx  SummaryTab.tsx  TranscriptTab.tsx  UsageTab.tsx  index.ts  utils.ts
src/contexts/: ThemeContext.tsx  ToastContext.tsx
src/hooks/: useAutoLaunch.ts  useElectron.ts  useToast.ts
src/lib/: curl-validator.ts
src/pages/: Launcher.tsx
(+23 files in other folders)
